/*
	 Инсталлим компоненты:
	 go get -u google.golang.org/grpc
	 go get -u github.com/golang/protobuf/protoc-gen-go

	 Качаем бинарник protoc https://github.com/protocolbuffers/protobuf/releases/tag/v3.12.3
	 Добавляем в PATH бинарник protoc

	 Команда для кодогенерации этого файла, находясь в каталоге уровнем выше:
	 protoc -I proto proto/item_repository.proto --go_out=plugins=grpc:proto/
*/

syntax = "proto3";
package proto;

service ItemRepository {
  rpc CreateItem(CreateItemRequest) returns (Item) {}
  rpc UpdateItem(UpdateItemRequest) returns (Item) {}
  rpc GetItem(GetItemRequest) returns (Item) {}
  rpc DeleteItem(DeleteItemRequest) returns (Item) {}
}

message Item {
  int32 id = 1;
  string name = 2;
  float price = 3;
}

message CreateItemRequest {
  string name = 1;
  float price = 2;
}

message UpdateItemRequest {
  int32 id = 1;
  string name = 2;
  float price = 3;
}

message GetItemRequest {
  int32 id = 1;
}

message DeleteItemRequest {
  int32 id = 1;
}